--- a/environment.yml
+++ b/environment.yml
@@ -18,10 +18,8 @@ dependencies:
   - ipywidgets
   - openpyxl
   - lifelines=0.30.*
-  # no jupyterlab here
-  # no jupyter-server via pip
-  # no 'conda', 'openssl', 'sqlite' etc. (Binder provides those)
   - pip
   - pip:
       - ipyleaflet==0.18.2
-      # nothing else here unless you must
+# NOTE: Do NOT install jupyterlab or jupyter-server via pip here.
+# Keep core Jupyter bits from conda-forge to avoid clashes.
