--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,6 @@ channels:
   - conda-forge
 dependencies:
   - python=3.11
-  - jupyter-server
   - nbclassic
   - notebook=6.5.4
   - jupyter_contrib_nbextensions
@@ -21,4 +20,5 @@ dependencies:
   - pip
   - pip:
       - ipyleaflet==0.18.2
+      - jupyter-server==2.17.0
       - cowsay  # fun test package
