--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,7 @@ channels:
 dependencies:
   - python=3.11
   - nbclassic
-  - notebook=6.5.4
-  - jupyter_contrib_nbextensions
+  - notebook=6.5.4 # - jupyter_contrib_nbextensions
   - jupyter_nbextensions_configurator
   - numpy=1.26.0
   - pandas=2.2.0
@@ -21,4 +20,5 @@ dependencies:
   - pip:
       - ipyleaflet==0.18.2
       - jupyter-server==2.17.0
+      - https://github.com/ipython-contrib/jupyter_contrib_nbextensions/tarball/master
       - cowsay  # fun test package
